# beef-bourguinion

./: .clang-format  CMakeLists.txt  README.md
shaders/: basic.frag  basic.vert
src/: camera.cc  camera.hh  light.cc  light.hh  lodepng.cc  main.cc  mesh.cc  mesh.hh  object.cc  object.hh  program.cc  program.hh  scene.cc  scene.hh  texture.cc  texture.hh  window.cc  window.hh
